<resources>
    <string name="app_name">Safely</string>

    <!--General-->
    <string name="general_HideEncryptedNotesFirst">Hide encrypted notes first</string>
    <string name="general_notAvailableYet">Not available yet</string>
    <string name="general_secureMethodChanged">Your secure method has been changed</string>


    <!--Login Activity-->
    <string name="loginActivity_rememberThat">Remember!</string>
    <string name="loginActivity_tryAgain">Ups…Try again!</string>
    <string name="loginActivity_yourLastChance">This is your last chance
        \n(App will close) </string>

    <!--PatternLock-->
    <string name="patternLock_chooseYourLock">"Choose your pattern"</string>
    <string name="patternLock_chooseYourLockAgain">"Choose your pattern again"</string>
    <string name="patternLock_locksMustBeTheSame">Patterns must be the same!
     \nTry Again!</string>
    <string name="patternLock_selectYourLock">"Select your pattern"</string>

    <!--PinLock-->
    <string name="pinLock_chooseYourLock">"Write your PIN"</string>
    <string name="pinLock_chooseYourLockAgain">"Write your PIN again"</string>
    <string name="pinLock_locksMustBeTheSame">PIN numbers must be the same
        \nTry Again!</string>
    <string name="pinLock_selectYourLock">"Select your PIN"</string>

    <!--PasswordLock-->
    <string name="passwordLock_chooseYourLock">"Choose your password"</string>
    <string name="passwordLock_chooseYourLockAgain">"Write your password again"</string>
    <string name="passwordLock_locksMustBeTheSame">Passwords must be the same
        \nTry Again!</string>
    <string name="passwordLock_selectYourLock">"Write your password"</string>
    <string name="passwordLock_save">Save</string>
    <string name="passwordLock_minimalPasswordLength">
        Your password must be at least 1 sign!</string>

    <!--NoLock-->
    <string name="noLock_alertDialog_title">
        Are you sure you don\'t want to have any secure method?</string>
    <string name="noLock_alertDialog_message">(You can change this option later)</string>
    <string name="noLock_alertDialog_yes">Yes</string>
    <string name="noLock_alertDialog_no">No</string>


    <!--Main Activity-->

    <!--Activity_Main-->
    <string name="toolbar_appName">@string/app_name</string>
    <string name="toolbar_viewTypeDescription">"View type"</string>
    <string name="toolbar_sortByButtonDescription">"Sort by"</string>
    <string name="alertDialog_sureToCut">Are you sure to cut note content?</string>
    <string name="alertDialog_sureToCut_positive">Sure</string>
    <string name="alertDialog_sureToCut_negative">No</string>
    <string name="alertDialog_sureToDelete">Are you sure to delete note?</string>
    <string name="alertDialog_sureToDelete_positive">Sure</string>
    <string name="alertDialog_sureToDelete_negative">No</string>

    <!--Note_layout-->
    <string name="noteLayout_editTextHint">Write your note here</string>
    <string name="noteLayout_cancel">Cancel</string>
    <string name="noteLayout_save">Save</string>

    <!--Note_model-->
    <string name="noteModel_shapeImageDescription">Bookmark</string>

    <!--Notification-->
    <string name="notification_closeApp">Close application</string>
    <string name="notification_message">Application is still running…</string>
    <string name="notification_title">@string/app_name</string>


    <!--RecyclerView-->
    <string name="recyclerView_noNotesInformation">You have not any notes
        \nTap here to Add one</string>


    <!--Options Activity-->
    <string name="appBar_optionsName">Options</string>
    <string name="appBar_leftArrowDescription">"Left arrow"</string>
    <string name="optionsActivity_displayCategory">Display</string>
    <string name="optionsActivity_privacyCategory">Privacy</string>
    <string name="optionsActivity_showEncryptedNotes">Show encrypted notes</string>
    <string name="optionsActivity_changeRecyclerColor">Change background color</string>
    <string name="optionsActivity_changeNotesFontSize">Change notes font size</string>
    <string name="optionsActivity_changeLanguage">Change language</string>
    <string name="optionsActivity_changeSecureType">Change secure method</string>


    <!--SortChoose layout-->
    <string name="sortChooseLayout_title">Sort by</string>
    <string name="sortChooseLayout_alphabeticallyCategory">Alphabetically</string>
    <string name="sortChooseLayout_alphabeticallyCategory_AToZ">A -> Z</string>
    <string name="sortChooseLayout_alphabeticallyCategory_ZToA">Z -> A</string>
    <string name="sortChooseLayout_bookmarkedCategory">Bookmark</string>
    <string name="sortChooseLayout_bookmarkedCategory_yes">Yes</string>
    <string name="sortChooseLayout_bookmarkedCategory_no">No</string>
    <string name="sortChooseLayout_contentCategory">Content</string>
    <string name="sortChooseLayout_contentCategory_toLongest">To longest</string>
    <string name="sortChooseLayout_contentCategory_toShortest">To shortest</string>
    <string name="sortChooseLayout_createdDateCategory">Created</string>
    <string name="sortChooseLayout_createdDateCategory_toNewest">To newest</string>
    <string name="sortChooseLayout_createdDateCategory_toOldest">To oldest</string>
    <string name="sortChooseLayout_modifiedDateCategory">Modified</string>
    <string name="sortChooseLayout_modifiedDateCategory_toEarliest">To earliest</string>
    <string name="sortChooseLayout_modifiedDateCategory_toLatest">To latest</string>

    <string name="sortChooseLayout_alphabeticallyCategory_AToZ_contentDescription">A -> Z</string>
    <string name="sortChooseLayout_alphabeticallyCategory_ZToA_contentDescription">Z -> A</string>
    <string name="sortChooseLayout_bookmarkedCategory_yes_contentDescription">Yes</string>
    <string name="sortChooseLayout_bookmarkedCategory_no_contentDescription">No</string>
    <string name="sortChooseLayout_contentCategory_toLongest_contentDescription">To longest</string>
    <string name="sortChooseLayout_contentCategory_toShortest_contentDescription">
        To shortest</string>
    <string name="sortChooseLayout_createdDateCategory_toNewest_contentDescription">
        To newest</string>
    <string name="sortChooseLayout_createdDateCategory_toOldest_contentDescription">
        To oldest</string>
    <string name="sortChooseLayout_modifiedDateCategory_toEarliest_contentDescription">
        To earliest</string>
    <string name="sortChooseLayout_modifiedDateCategory_toLatest_contentDescription">
        To latest</string>


    <!--Tutorial Activity-->
    <string name="tutorialActivity_logotypeDescription">Logotype</string>
    <string name="tutorialActivity_bytesDescription">Bytes</string>
    <string name="tutorialActivity_wifi_offDescription">Wifi off</string>
    <string name="tutorialActivity_welcome_title">Welcome in Safely!</string>
    <string name="tutorialActivity_welcome_message">
        Your new app where you can safe your notes and passwords</string>
    <string name="tutorialActivity_byte_safety_title">Your data are encrypted!</string>
    <string name="tutorialActivity_byte_safety_message">
        Safely encrypts your data to bytes multiplied by a big number</string>
    <string name="tutorialActivity_internet_safety_title">No internet connection!</string>
    <string name="tutorialActivity_internet_safety_message">
      Safely has no internet connection so no one will see your data on the web! </string>
    <string name="tutorialActivity_chooseSecureMethod">Choose secure method</string>
    <string name="tutorialActivity_patternLock">Pattern</string>
    <string name="tutorialActivity_patternLockDescription">Pattern lock</string>
    <string name="tutorialActivity_pinLock">PIN</string>
    <string name="tutorialActivity_pinLockDescription">Pin lock</string>
    <string name="tutorialActivity_passwordLock">Password</string>
    <string name="tutorialActivity_passwordLockDescription">Password lock</string>
    <string name="tutorialActivity_noLock">No lock</string>
    <string name="tutorialActivity_noLockDescription">No lock</string>

    <!--Tutorial secure methods-->
    <string name="tutorial_secure_methods_text_view_cancel">Cancel</string>

</resources>
